Implement Gandalf Token Contract.

--- a/contract/Gandalf.Contracts.Token/Gandalf.Contracts.Token.csproj
+++ b/contract/Gandalf.Contracts.Token/Gandalf.Contracts.Token.csproj
@@ -14,5 +14,17 @@
         <ContractCode Include="..\..\protobuf\gandalf_token_contract.proto">
             <Link>Protobuf\Proto\gandalf_token_contract.proto</Link>
         </ContractCode>
+        <ContractBase Include="..\..\protobuf\acs1.proto">
+            <Link>Protobuf\Proto\acs1.proto</Link>
+        </ContractBase>
+        <ContractBase Include="..\..\protobuf\acs2.proto">
+            <Link>Protobuf\Proto\acs2.proto</Link>
+        </ContractBase>
+        <ContractBase Include="..\..\protobuf\authority_info.proto">
+            <Link>Protobuf\Proto\authority_info.proto</Link>
+        </ContractBase>
+        <ContractBase Include="..\..\protobuf\transaction_fee.proto">
+            <Link>Protobuf\Proto\transaction_fee.proto</Link>
+        </ContractBase>
     </ItemGroup>
 </Project>
